refactor(utils): remove unused methods and simplify TextWrapper
- Removed unused methods `getWrappedLine`, `wrapFirstLineWithEllipsis`, `wrapTwoFirstLinesWithEllipsis`, `doHasWrapped`, `appendLine`, `test`, `fillLineWithWord`, and `fillLineWithChar`
- Simplified `wrapTextLineByWordsOrChars` method